[package]
name = "bevvy_test"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-commands]
start-watch = "cargo watch -i assets -cx run"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11.0"
geo = "0.26.0"
geo-types = "0.7.11"
